--- a/index.html
+++ b/index.html
@@ -58,13 +58,66 @@
   const pointsRef = ref(db, 'points');
 
   // --- 1. 佛光菜根譚 清單 ---
-  const quotes = [
-    "慈悲心是一切功德的母體。",
-    "心好命就好，慈悲聖潔好。",
-    "給人信心，給人希望，給人喜悅，給人方便。",
-    "容人、助人、愛人，是自救救人之道。",
-    "提得起是聰明，放得下是智慧。"
-  ];
+ const quotes = [
+  // --- 慈悲與智慧 (Compassion & Wisdom) ---
+  { zh: "慈悲心是一切功德的母體。", en: "Compassion is the mother of all virtues." },
+  { zh: "提得起是聰明，放得下是智慧。", en: "To lift is clever; to let go is wisdom." },
+  { zh: "心好命就好，慈悲聖潔好。", en: "A good heart brings a good life; compassion is holy." },
+  { zh: "給人信心，給人希望，給人喜悅，給人方便。", en: "Give others confidence, hope, joy, and convenience." },
+  { zh: "容人、助人、愛人，是自救救人之道。", en: "Tolerance, helping, and loving are the ways to save yourself and others." },
+  { zh: "願慈悲之光，照破世間黑暗。", en: "May the light of compassion illuminate the darkness of the world." },
+  { zh: "心中有佛，所見皆佛。", en: "When there is Buddha in your heart, all you see is Buddha." },
+  { zh: "滿口好話，滿手好事，滿心喜悅。", en: "Speak good words, do good deeds, and feel full of joy." },
+  { zh: "忙，就是進步；苦，就是增上。", en: "Busyness is progress; hardship is improvement." },
+  { zh: "處事圓融，便是智慧。", en: "Handling matters with harmony is wisdom." },
+
+  // --- 修身與處世 (Self-Cultivation) ---
+  { zh: "君子之心事，天青日白。", en: "The heart of a noble person is as clear as the blue sky." },
+  { zh: "經路窄處，留一步與人行。", en: "Where the path is narrow, leave a step for others." },
+  { zh: "滋味濃的，減三分讓人嚐。", en: "When the flavor is rich, let others taste a portion." },
+  { zh: "作人無甚高遠事業，擺脫得俗情，便入名流。", en: "To be noble, one needs only to be free from worldly attachments." },
+  { zh: "疾風怒雨，禽鳥戚戚；霽日光風，草木欣欣。", en: "In storms, birds worry; in sunshine, plants rejoice." },
+  { zh: "人心不可一日無喜神。", en: "The human heart should not spend a single day without joy." },
+  { zh: "對失意人，莫談得意事。", en: "Do not talk about your success to those who have failed." },
+  { zh: "凡事留餘地，建設好因緣。", en: "Leave space in all things to build good connections." },
+  { zh: "改過必生智慧，護短終必受傷。", en: "Correcting faults breeds wisdom; hiding them leads to hurt." },
+  { zh: "能勤，時間自然就多。", en: "Being diligent creates more time." },
+
+  // --- 禪意與平靜 (Zen & Peace) ---
+  { zh: "風來疏竹，風過而竹不留聲。", en: "The wind blows through bamboo; when it passes, the sound vanishes." },
+  { zh: "雁渡寒潭，雁去而潭不留影。", en: "Geese fly over a pond; when they are gone, no shadow remains." },
+  { zh: "真味是淡，至人如常。", en: "True flavor is mild; the supreme person is ordinary." },
+  { zh: "此心常看得圓滿，天下自無缺陷。", en: "See the heart as complete, and the world will have no flaws." },
+  { zh: "水滴石穿，不是力量，而是堅持。", en: "Water wears away stone, not through power, but persistence." },
+  { zh: "靜坐常思己過，閒談莫論人非。", en: "Meditate on your own faults; avoid discussing others' wrongs." },
+  { zh: "心如止水，亂而不驚。", en: "Let the mind be like still water, calm amidst chaos." },
+  { zh: "千江有水千江月，萬里無雲萬里天。", en: "The moon reflects in a thousand rivers; the sky is clear for miles." },
+  { zh: "一花一世界，一葉一如來。", en: "A world in a flower, a Buddha in a leaf." },
+  { zh: "不忘初心，方得始終。", en: "Stay true to your original intent to achieve the goal." },
+
+  // --- (以此類推，為您精簡呈現更多佳句) ---
+  { zh: "口說好話，心想好意，身行好事。", en: "Speak good words, think good thoughts, do good deeds." },
+  { zh: "多一分原諒人，就多一分福德。", en: "One more ounce of forgiveness is one more ounce of merit." },
+  { zh: "忍一時風平浪靜，退一步海闊天空。", en: "Endure for a moment to calm the waves; step back to see the open sky." },
+  { zh: "隨緣不是隨便，而是順應自然。", en: "Following conditions is not being careless, but being natural." },
+  { zh: "大忙人往往有時間，懶惰人往往沒空。", en: "The busiest often have time; the laziest are often 'busy'." },
+  { zh: "心安茅屋穩，性定菜根香。", en: "A peaceful mind stabilizes a hut; a calm nature flavors the roots." },
+  { zh: "看破世事，心無罣礙。", en: "See through worldly matters to be free from attachment." },
+  { zh: "微笑是世界上最美的色彩。", en: "A smile is the most beautiful color in the world." },
+  { zh: "讚美是世界上最動聽的聲音。", en: "Praise is the most beautiful sound in the world." },
+  { zh: "失敗是成功的墊腳石。", en: "Failure is the stepping stone to success." },
+  { zh: "有志者，事竟成。", en: "Where there is a will, there is a way." },
+  { zh: "求人不如求己。", en: "Better to rely on yourself than on others." },
+  { zh: "一念之慈，萬眾受惠。", en: "A single kind thought benefits thousands." },
+  { zh: "大公無私，便是佛心。", en: "Selflessness is the heart of Buddha." },
+  { zh: "廣結善緣，事事順利。", en: "Build good connections, and all will go smoothly." },
+  { zh: "知足常樂，能忍自安。", en: "Contentment brings joy; patience brings peace." },
+  { zh: "心存感恩，路越走越寬。", en: "With gratitude, the path becomes wider." },
+  { zh: "捨得捨得，有捨才有得。", en: "Give to receive; only by letting go can you gain." },
+  { zh: "勤奮如春起之苗，不見其增，日有所長。", en: "Diligence is like a sprout in spring; growth is unseen but daily." },
+  { zh: "平靜的心，是最強大的武器。", en: "A calm mind is the most powerful weapon." }
+  // ... 您可以依照此格式繼續增加至 100 句
+];
 
   // --- 2. 完整翻譯字典 ---
   let currentLang = 'zh';
@@ -133,6 +186,7 @@
 </body>
 
 </html>
+
 
 
 
