--- a/index.html
+++ b/index.html
@@ -59,14 +59,23 @@
 
         /* 蓮花呼吸燈動畫 */
         @keyframes breathe {
-            0% { transform: scale(1); opacity: 0.7; filter: drop-shadow(0 0 5px gold); }
-            50% { transform: scale(1.3); opacity: 1; filter: drop-shadow(0 0 15px gold); }
-            100% { transform: scale(1); opacity: 0.7; filter: drop-shadow(0 0 5px gold); }
+            0% { transform: scale(1); opacity: 0.8; filter: drop-shadow(0 0 5px gold); }
+            50% { transform: scale(1.4); opacity: 1; filter: drop-shadow(0 0 20px gold); }
+            100% { transform: scale(1); opacity: 0.8; filter: drop-shadow(0 0 5px gold); }
         }
 
         .lotus-icon {
-            font-size: 24px; text-align: center;
-            animation: breathe 2.5s infinite ease-in-out;
+            font-size: 30px !important; /* 加大蓮花 */
+            text-align: center;
+            line-height: 1;
+            cursor: pointer;
+            z-index: 1000 !important; /* 確保在最上層 */
+            animation: breathe 2s infinite ease-in-out;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: none !important;
+            border: none !important;
         }
 
         /* 地圖區域 */
@@ -245,3 +254,4 @@
 </script>
 </body>
 </html>
+
